# openllm

./: .gitignore  .vscodeignore  Cargo.toml  README.md  jira.md  jira_orig.md  package-lock.json  package.json  plan.txt  tsconfig.json  value.md
crates/openllm-core/: Cargo.toml
crates/openllm-core/src/: lib.rs
crates/openllm-core/src/config/: file.rs  memory.rs  mod.rs  traits.rs
crates/openllm-core/src/logging/: console.rs  file_logger.rs  mod.rs  noop.rs  traits.rs
crates/openllm-core/src/mcp/: client.rs  mod.rs
crates/openllm-core/src/providers/: error.rs  genai_adapter.rs  genai_provider.rs  mock.rs  mod.rs  traits.rs
crates/openllm-core/src/resolver/: config_resolver.rs  mod.rs  secret_resolver.rs
crates/openllm-core/src/rpc/: client.rs  endpoint.rs  mod.rs  rpc_config_provider.rs  rpc_secret_store.rs
crates/openllm-core/src/secrets/: chain_store.rs  env_store.rs  keychain_store.rs  memory_store.rs  mod.rs  registry.rs  traits.rs
crates/openllm-core/src/tools/: mod.rs  registry.rs
crates/openllm-core/src/types/: cancellation.rs  message.rs  mod.rs  model.rs  stream.rs  tool.rs
crates/openllm-napi/: Cargo.toml
crates/openllm-napi/npm/: index.js  package.json
crates/openllm-napi/src/: lib.rs
crates/openllm-python/: Cargo.toml
crates/openllm-python/src/: lib.rs
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  JIRA_MIGRATION_GUIDE.md  MCP_TOOLS_ARCHITECTURE.md  PRODUCT_OVERVIEW.md  USAGE.md
src/: extension.ts  types.ts
src/config/: ConfigManager.ts  ContinueConfigReader.ts  SecretResolver.ts  index.ts
src/core/: OpenLLMProvider.ts  index.ts
src/providers/: AnthropicProvider.ts  AzureOpenAIProvider.ts  BaseProvider.ts  GeminiProvider.ts  MistralProvider.ts  OllamaProvider.ts  OpenAIProvider.ts  OpenRouterProvider.ts  index.ts
src/registry/: ProviderRegistry.ts
src/ui/: ApiKeyPanel.ts  ChatViewProvider.ts  PlaygroundPanel.ts  StatusPanel.ts  index.ts
tests/: README.md  run_all.sh
tests/node/: package-lock.json  package.json  test_keychain.js  test_mock_provider.js  test_secret_stores.js
tests/python/: test_secret_stores.py
tests/rpc/: test_rpc_client.js
