[workspace]
resolver = "2"
members = [
    "crates/openllm-core",
    "crates/openllm-napi",
    "crates/openllm-python",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["OpenLLM Contributors"]
repository = "https://github.com/openllm/openllm"

[workspace.dependencies]
# Shared dependencies across crates
thiserror = "1.0"
once_cell = "1.19"
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Internal crates
openllm-core = { path = "crates/openllm-core" }
