[package]
name = "openllm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core LLM provider abstractions - runtime agnostic"

[dependencies]
thiserror.workspace = true
once_cell.workspace = true
async-trait.workspace = true

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# LLM provider library - handles streaming, protocols, provider quirks
genai = "0.5"

# MCP (Model Context Protocol) client - official Rust SDK
# Used to connect to MCP servers (VS Code extension, other tool providers)
# Features:
#   - client: Core client functionality
#   - transport-streamable-http-client-reqwest: HTTP client with reqwest
#   - schemars: JSON Schema support for tool definitions
rmcp = { version = "0.14", features = [
    "client",
    "transport-streamable-http-client-reqwest",
    "schemars"
] }

# HTTP client (for custom providers not in genai, and for MCP over Unix socket)
reqwest = { version = "0.12", features = ["json", "stream"] }
hyper = { version = "1.4", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "tokio"] }
hyperlocal = "0.9"

# Async runtime
tokio = { version = "1.35", features = ["sync", "io-util", "net"] }
futures = "0.3"

# Platform directories (home dir, config dir, etc.)
dirs = "5"

# RPC communication (for VS Code and other IDE integrations)
parking_lot = "0.12"

# System keychain access - Linux needs sync-secret-service for GNOME Keyring/Secret Service API
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
keyring = "3"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = "3"